add colours for patrons and membership text

--- a/assets/stylesheets/gu-sass/colours.scss
+++ b/assets/stylesheets/gu-sass/colours.scss
@@ -142,6 +142,9 @@ $gu-colours: (
   analysis-garnett-underline: #ffbac8,
 
   green-dark: #236925,
+
+  patrons: #a1845c,
+  masterclass: #bb3b80
 );
 
 // Given the name of the colour this returns the hex value.
