--- a/assets/components/svgs/svg.scss
+++ b/assets/components/svgs/svg.scss
@@ -77,14 +77,14 @@
   }
 }
 
-.svg-scribble {
-  font-family: $gu-headline;
-}
-
-.svg-advertising-graph-mobile, .svg-advertising-graph-desktop {
-  font-family: $gu-headline;
-}
-
-.svg-paywall-mobile, .svg-paywall-desktop, .svg-paywall-wide {
+.svg-scribble,
+.svg-advertising-graph-mobile,
+.svg-advertising-graph-desktop,
+.svg-paywall-mobile,
+.svg-paywall-desktop,
+.svg-paywall-wide,
+.svg-breaking-the-headlines,
+.svg-no-one,
+.svg-with-support {
   font-family: $gu-headline;
 }
