--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -18,11 +18,33 @@
     @include multiline(4, $border);
   }
   /*
-  div > $selector adds some leeway to use react elements with extra divs 
-  until preact.fragment gets here
+  All our ContentBlocks have the behaviour of rendering 
+  with a border between them if there's two with the same 
+  background colour in a row.
+
+  These selectors attempt to enforce this by applying the 
+  border to .selector + .selector (adjacent sibling) 
+  
+  The second selector applies the rule to the first child 
+  of an element wrapped in an extra div if it matches the 
+  classname (because React makes you do that sometimes)
+
+  I hope this explains it:
+  
+  +----------------+
+  | blue block     |
+  +----------------+
+  +----------------+
+  | wrapping div   |
+  |+--------------+|
+  || another blue ||
+  || block        ||
+  |+--------------+|
+  +----------------+
+
   */
   & + &,
-  & + div > &  {
+  & + div > &:first-child  {
     .component-left-margin-section__content {
       border-top: 1px solid $border;
     }
@@ -114,9 +136,11 @@
   }
   .component-product-page-content-block__content > .component-product-page-content-block-divider:first-child {
     margin-top: ($gu-v-spacing*-.5) - 1px;
-    /*cancel out padding if this is the first child then
+    /*
+    cancel out padding if this is the first child then
     overlap under the top border to avoid the first multiline
-    merging with it and looking as a 2px border */
+    merging with it and looking as a 2px border 
+    */
   }
 }
 
