correct the main thankyou cta to be solid rather than hollow

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -1056,6 +1056,7 @@ form {
   border-bottom: 1px solid gu-colour(garnett-neutral-4);
   margin: 0 -10px;
   padding: 0 10px;
+  color: #121212;
 
   h3 {
     font-family: $gu-text-egyptian-web;
@@ -1069,6 +1070,11 @@ form {
     display: inline-block;
     margin-bottom: $gu-v-spacing * 3;
     margin-top: $gu-v-spacing;
+
+    .button--survey {
+      background-color: #121212;
+      color: white;
+    }
   }
 
   .component-cta-link__text {
