--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -78,6 +78,11 @@
   );
 }
 
+.component-product-page-content-block--higher {
+  position: relative;
+  z-index: 10;
+}
+
 .component-product-page-content-block__content {
   max-width: gu-span(12);
   padding: ($gu-v-spacing/2) ($gu-h-spacing / 2) 0;
