--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -342,7 +342,7 @@ header[role="banner"] {
     bottom: 0;
     height: 580px;
     left: 50%;
-    position: absolute;
+    position: fixed;
     transform: translate(-50%,0);
     width: 1400px;
   }
@@ -1135,5 +1135,28 @@ form {
     .form__radio-group-list {
       padding-top: 0;
     }
+  }
+}
+
+.us-campaign__background {
+  display: none;
+  position: absolute;
+  z-index: -1;
+
+  @include mq($from: tablet) {
+    display: block;
+    transform: translate(200px, -135px);
+  }
+
+  @include mq($from: desktop) {
+    transform: translate(200px, -135px);
+  }
+
+  @include mq($from: leftCol) {
+    transform: translate(215px, -225px);
+  }
+
+  @include mq($from: wide) {
+    transform: translate(215px, -300px);
   }
 }
