--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -197,7 +197,7 @@ footer[role="contentinfo"] a {
 
 /*= TYPOGRAPHY */
 body {
-  color: gu-colour(media-garnett-main-1);
+  color: gu-colour(garnett-neutral-1);
   font: normal 16px/1.5 $gu-text-egyptian-web;
 }
 
