--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -192,6 +192,15 @@ footer[role="contentinfo"] a {
 
 $progess-bar-height: 10px;
 
+.contributions-landing-ticker {
+  padding-bottom: $gu-v-spacing;
+}
+
+.contributions-landing-ticker__border {
+  border-top: 1px solid gu-colour(garnett-neutral-4);
+  margin: 0 -10px;
+}
+
 .contributions-landing-ticker--hidden {
   visibility: hidden;
   .contributions-landing-ticker__border {
@@ -259,12 +268,6 @@ $progess-bar-height: 10px;
   bottom: 0;
   transform: translateX(-100%);
   transition: transform 3s cubic-bezier(.25, .55, .2, .85);
-}
-
-.contributions-landing-ticker__border {
-  border-bottom: 1px solid gu-colour(garnett-neutral-4);
-  margin: 0 -10px;
-  padding: $gu-v-spacing 0;
 }
 
 /*= CONTENT */
