form validation done

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -1083,6 +1083,13 @@ form {
   }
 }
 
+
+/* Stripe Payment Request Button */
+
+.stripe-payment-request-button--hidden {
+  display: none;
+}
+
 /* Small header test */
 
 @include mq($from: mobile, $until: tablet) {
