increase spacing under ticker

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -193,7 +193,7 @@ footer[role="contentinfo"] a {
 $progess-bar-height: 10px;
 
 .contributions-landing-ticker {
-  padding-bottom: $gu-v-spacing;
+  padding-bottom: $gu-h-spacing;
 }
 
 .contributions-landing-ticker__border {
