couple of tweaks

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -1162,6 +1162,11 @@ form {
 
 /* Stripe Payment Request Button */
 
+.stripe-payment-request-button {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
 .stripe-payment-request-button--hidden {
   display: none;
 }
