--- a/assets/components/productPage/productPageTabs/productPageTabs.scss
+++ b/assets/components/productPage/productPageTabs/productPageTabs.scss
@@ -21,7 +21,7 @@
 .component-product-page-tabs__tab {
   @include gu-fontset-heading-sans;
   text-decoration: none;
-  padding: ($gu-v-spacing)/1.5 $gu-h-spacing/2;
+  padding: ($gu-v-spacing)/1.25 $gu-h-spacing/2 ($gu-v-spacing)/1.5;
   display: block;
   width: 100%;
   border: 0;
@@ -41,13 +41,14 @@
   outline: none;
 }
 
-.component-product-page-tabs__tab:focus,
-.component-product-page-tabs__tab:hover {
-  text-decoration: underline;
+.component-product-page-tabs__tab--active {
+  box-shadow: inset 0 4px 0 0 gu-colour(news-garnett-highlight), inset 1px 0 0 0 gu-colour(garnett-neutral-4), inset -1px 0 0 0 gu-colour(garnett-neutral-4), inset 0 -1px 0 0 gu-colour(garnett-neutral-5) ;
+  text-decoration: none;
+  pointer-events: none;
+  cursor: default;
 }
 
-.component-product-page-tabs__tab--active {
-  box-shadow: inset 0 2px 0 0 gu-colour(news-garnett-highlight), inset 1px 0 0 0 gu-colour(garnett-neutral-4), inset -1px 0 0 0 gu-colour(garnett-neutral-4), inset 0 -1px 0 0 gu-colour(garnett-neutral-5) ;
-  text-decoration: none;
-  cursor: default;
+.component-product-page-tabs__tab:focus,
+.component-product-page-tabs__tab:hover {
+  box-shadow: inset 0 4px 0 0 gu-colour(garnett-neutral-4), inset 0 0 0 1px gu-colour(garnett-neutral-4);
 }
