--- a/app/views/digitalSubscription.scala.html
+++ b/app/views/digitalSubscription.scala.html
@@ -8,25 +8,22 @@
   js: String,
   css: String,
   csrf: Option[String],
-  user: Option[IdUser]
+  user: IdUser
 )(implicit assets: AssetsResolver, requestHeader: RequestHeader, settings: Settings)
 
 @userDataScript = {
   <script type="text/javascript">
-    window.guardian = window.guardian || {};
+  window.guardian = window.guardian || {};
 
-  @user.map { x =>
     window.guardian.user = {
-      @for(fields <- x.privateFields; firstName <- fields.firstName; lastName <- fields.secondName) {
-                  firstName: "@firstName",
-                  lastName: "@lastName",
-                  email: "@x.primaryEmailAddress"
-              }
-    };
+      @for(fields <- user.privateFields; firstName <- fields.firstName; lastName <- fields.secondName) {
+        firstName: "@firstName",
+        lastName: "@lastName",
+        email: "@user.primaryEmailAddress"
+      }
   }
 
   </script>
 }
-
 
 @main(title = title, scripts = userDataScript, mainJsBundle = js, mainId = id, mainStyleBundle = css, csrf = csrf)
