--- a/app/views/digitalSubscription.scala.html
+++ b/app/views/digitalSubscription.scala.html
@@ -11,7 +11,7 @@
   user: IdUser
 )(implicit assets: AssetsResolver, requestHeader: RequestHeader, settings: Settings)
 
-@userDataScript = {
+@scripts = {
   <script type="text/javascript">
   window.guardian = window.guardian || {};
 
@@ -26,4 +26,4 @@
   </script>
 }
 
-@main(title = title, scripts = userDataScript, mainJsBundle = js, mainId = id, mainStyleBundle = css, csrf = csrf)
+@main(title = title, scripts = scripts, mainJsBundle = js, mainId = id, mainStyleBundle = css, csrf = csrf)
