add a little padding to the t&c

--- a/assets/components/legal/legalSection/legalSection.scss
+++ b/assets/components/legal/legalSection/legalSection.scss
@@ -19,6 +19,10 @@
     line-height: 18px;
     color: gu-colour(media-garnett-main-1);
 
+    .component-terms-privacy__change {
+      padding-bottom: 4px;
+    }
+
     @include mq($from: desktop) {
       width: 550px;
     }
