--- a/assets/pages/support-landing/supportLanding.scss
+++ b/assets/pages/support-landing/supportLanding.scss
@@ -6,6 +6,7 @@
 // ----- Shared Components ----- //
 
 @import '~components/headers/simpleHeader/simpleHeader';
+@import '~components/leftMarginSection/leftMarginSection';
 @import '~components/countryGroupSwitcher/countryGroupSwitcher';
 @import '~components/selectInput/selectInput';
 @import '~components/introduction/introduction';
