--- a/assets/pages/contributions-landing/contributionsLanding.scss
+++ b/assets/pages/contributions-landing/contributionsLanding.scss
@@ -5,6 +5,7 @@
 // ----- Shared Components ----- //
 
 @import '~components/headers/simpleHeader/simpleHeader';
+@import '~components/leftMarginSection/leftMarginSection';
 @import '~components/countryGroupSwitcher/countryGroupSwitcher';
 @import '~components/selectInput/selectInput';
 @import '~components/introduction/introduction';
