--- a/assets/components/headers/simpleHeader/simpleHeader.scss
+++ b/assets/components/headers/simpleHeader/simpleHeader.scss
@@ -8,20 +8,26 @@
   }
 }
 
-.component-simple-header__utility {
-  float: left;
-  height: 100%;
-}
-
-.component-simple-header__link {
-  float: right;
-  height: 100%;
-}
-
 .component-simple-header__content {
   max-width: gu-span(12);
-  padding: ($gu-v-spacing/2) ($gu-h-spacing / 2) $gu-v-spacing;
-  height: 68px;
+  padding: ($gu-v-spacing/4) ($gu-h-spacing / 2) ($gu-v-spacing /2);
+  height: 42px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+
+  @include mq($from: mobileMedium) {
+    height: 52px;
+  }
+
+  @include mq($from: mobileLandscape) {
+    height: 68px;
+  }
+
+  @include mq($from: tablet) {
+    height: 86px;
+    padding: ($gu-v-spacing/2) ($gu-h-spacing / 2) $gu-v-spacing;
+  }
 
   @include mq($from: leftCol) {
     max-width: gu-span(13);
@@ -30,8 +36,16 @@
   @include mq($from: wide) {
     max-width: gu-span(14);
   }
+}
 
-  @include mq($from: tablet) {
-    height: 86px;
-  }
+.component-simple-header__utility {
+  float: left;
+  height: 100%;
+  flex: 0 0 auto;
+}
+
+.component-simple-header__link {
+  float: right;
+  height: 100%;
+  flex: 0 1 auto;
 }
