--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -38,3 +38,51 @@
     }
   }
 }
+
+.component-product-page-info-chip__gifting-info {
+  display: block;
+  padding-top: 10px;
+  @include mq($from: tablet) {
+    padding-top: 20px;
+  }
+}
+
+.component-product-page-info-chip__cancel-info {
+  margin-top: 10px;
+  display: block;
+}
+
+.component-product-page-info-chip__gifting-info-text {
+  display: inline-block;
+  margin-top: -30px;
+  @include mq($until: mobileLandscape) {
+    margin-left: 30px;
+  }
+  @include mq($from: mobileLandscape) {
+    margin-left: 10px;
+  }
+}
+
+.component-product-page-info-chip__gifting-info-svg {
+  width: 18px;
+  height: 20px;
+}
+
+.component-product-page-info-chip__cancel-info-text {
+  display: inline-block;
+  @include mq($until: mobileMedium) {
+    margin-left: 30px;
+    margin-top: -30px;
+  }
+  @include mq($from: mobileMedium, $until: phablet) {
+    margin-top: 10px;
+  }
+  @include mq($from: mobileMedium) {
+    margin-left: 10px;
+  }
+}
+
+.component-product-page-info-chip__cancel-info-svg {
+  width: 18px;
+  height: 18px;
+}
