--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -17,24 +17,40 @@
 }
 
 .component-product-page-hero--weekly {
-  .component-grid-image {
-    display: block;
-    width: 90%;
-    max-width: 500px;
-    margin: ($gu-v-spacing * 3) auto -25%;
-    z-index: 9;
-    @include mq($from: tablet) {
-      width: auto;
-      max-width: 100%;
-      height: 100%;
+
+  @include mq($from: tablet) {
+    .component-heading-block {
+      margin-top: 24em;
+    }
+    .component-grid-picture {
       position: absolute;
-      top: 5%;
-      right: -20%;
-      margin: 0;
+      top: 0;
+      min-width: 100%;
+      height: 100%;
+      @include mq($from: wide) {
+        left: gu-span(2) * -1;
+      }
     }
-    @include mq($from: desktop) {
-      left: 450px;
-      right: auto;
+    .component-grid-picture__image {
+      height: 100%;
+      display: block;
     }
+  }
+  @include mq($until: tablet) {
+    .component-grid-picture {
+      max-height: 20em;
+      overflow: hidden;
+      display: block;
+    }
+    .component-grid-picture__image {
+      max-width: gu-span(8);
+      margin: auto;
+      float: none;
+      display: block;
+    }
+  }
+
+  .component-left-margin-section__content {
+    border-left: none;
   }
 }
