add lms to header

--- a/assets/components/headers/simpleHeader/simpleHeader.scss
+++ b/assets/components/headers/simpleHeader/simpleHeader.scss
@@ -1,4 +1,5 @@
 @import '~stylesheets/gu-sass/gu-sass';
+@import '~components/leftMarginSection/leftMarginSection';
 
 .component-simple-header {
   background-color: gu-colour(header-dark);
