--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -139,8 +139,8 @@
   .component-product-page-text-block--heading-only + .component-product-page-content-block-divider {
     margin-top: ($gu-v-spacing*-1)
   }
-  .component-product-page-plan-form + .component-product-page-info-chip {
-    margin-top: ($gu-v-spacing*-1.5)
+  .component-product-page-info-chip + .component-product-page-info-chip {
+    margin-top: ($gu-v-spacing * -1);
   }
   .component-product-page-content-block__content > .component-product-page-content-block-divider:first-child {
     margin-top: ($gu-v-spacing*-.5) - 1px;
