--- a/app/views/digitalSubscription.scala.html
+++ b/app/views/digitalSubscription.scala.html
@@ -1,14 +1,20 @@
-@import assets.AssetsResolver
-@import com.gu.identity.play.IdUser
-
 @import admin.Settings
+@import assets.AssetsResolver
+@import com.gu.i18n.Currency.AUD
+@import com.gu.identity.play.IdUser
+@import com.gu.support.config._
+@import helper.CSRF
 @(
   title: String,
   id: String,
   js: String,
   css: String,
   csrf: Option[String],
-  user: IdUser
+  user: IdUser,
+  uatMode: Boolean,
+  defaultStripeConfig: StripeConfig,
+  uatStripeConfig: StripeConfig,
+  payPalConfig: PayPalConfig
 )(implicit assets: AssetsResolver, requestHeader: RequestHeader, settings: Settings)
 
 @scripts = {
@@ -22,7 +28,18 @@
         email: "@user.primaryEmailAddress",
         country: "@country"
       }
-  }
+  };
+
+  window.guardian.stripeKeyDefaultCurrencies = {
+          default: "@defaultStripeConfig.forCurrency(None).publicKey",
+          uat: "@uatStripeConfig.forCurrency(None).publicKey"
+        };
+        window.guardian.stripeKeyAustralia = {
+          default: "@defaultStripeConfig.forCurrency(Some(AUD)).publicKey",
+          uat: "@uatStripeConfig.forCurrency(Some(AUD)).publicKey"
+        };
+        window.guardian.payPalEnvironment = "@payPalConfig.payPalEnvironment";
+        window.guardian.csrf = { token: "@CSRF.getToken.value" };
 
   </script>
 }
