--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -26,6 +26,8 @@
 @import '~components/forms/formHOCs/withLabel';
 @import '~components/forms/formHOCs/withError';
 @import '~components/forms/formHOCs/withArrow';
+@import '~components/progressMessage/progressMessage';
+@import '~components/spinners/animatedDots';
 
 
 // ----- Page-Specific Styles ----- //
