--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -106,6 +106,16 @@
 
   // ----- Thank You
 
+  .thank-you-stage {
+    .component-checkout-heading {
+      z-index: 10;
+      position: relative;
+      .component-left-margin-section__content {
+        box-sizing: border-box;  
+      }  
+    }
+  }
+
   .thank-you-content {
     // Makes sure the circle SVGs stay behind the heading.
     position: relative;
